# archiver

./: Cargo.toml
crates/rar/: Cargo.toml  README.md
crates/rar/src/: error.rs  lib.rs  main.rs
crates/rar/src/header/: end_of_archive.rs  file.rs  main_archive.rs  mod.rs
crates/rar/src/header_4/: mod.rs
crates/zip/: Cargo.toml
crates/zip/src/: compression.rs  error.rs  lib.rs  main.rs
crates/zip/src/compression/: mod.rs
crates/zip/src/header/: central_directory_file.rs  end_of_central_directory.rs  local_file.rs  mod.rs
examples/: all_rar_files.rs  all_zip_files.rs
resources/: README.md
resources/rar/: RAR Test Winrar Best 128KB.rar  RAR4 Test Winrar Best 4096KB Recovery.rar  RAR4 Test Winrar Best 4096KB Solid.rar  RAR4 Test Winrar Best 4096KB.rar
resources/unzipped contents/: File 2.txt
resources/unzipped contents/Large Files/: ipsum 1.txt  ipsum 2.txt
resources/zip/: Zip Test 7-Zip Deflate Fastest Split.001  Zip Test 7-Zip Deflate Fastest Split.002
