[workspace]
members = [
    "crates/*"
]

[workspace.dependencies]
futures = "0.3"
num_enum = "0.5"
tokio = "1.21"
thiserror = "1.0"
tracing = "0.1"

[package]
name = "archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tracing-subscriber = "0.3"

futures = { workspace = true }
num_enum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

rar-archiver = { path = "crates/rar" }
zip-archiver = { path = "crates/zip" }

[[example]]
name = "all_rar_files"