[package]
name = "zip-archiver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Deflate, zlib, gzip
flate2 = "1.0"
bzip2-rs = "0.1"
lzma-rs = "0.2"

futures = { workspace = true }
num_enum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "rt", "macros", "rt-multi-thread", "io-util"] }